--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+#main_content {
+  position: relative;
+  bottom: 0;
+  right: 0;
+  color: #f1f1f1;
+  min-width: 100%;
+}
+#user_related {
+  position: inherit;
+}
+
 .split {
   height: 100%;
   width: 50%;
@@ -30,16 +42,7 @@
 
 h1, h2, h3, h4 {
   color: rgb(255, 255, 255);
-}
-
-#main_content {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  height: 100%;
+  font-family: "PFSolid";
 }
 
 #new_user_form {
@@ -59,17 +62,17 @@ h1, h2, h3, h4 {
 
 #pokemon_new:hover {
   opacity: 0.8;
-  filter: alpha(opacity=100); /* For IE8 and earlier */
+  filter: alpha(opacity=80); /* For IE8 and earlier */
 }
 
 #pokemon_new:active {
   opacity: 1;
-  filter: alpha(opacity=50); /* For IE8 and earlier */
-  size: 200%;
+  filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
 a {
   font-size: 150%;
+
 }
 
 #form {
@@ -94,9 +97,10 @@ a {
 
 #welcome_msg{
   text-align: center;
-  font-size: 500%;
+  font-size: 600%;
 }
 #create_new_user_link {
+  font-family: "PFSolid";
   padding-left: 3%;
   text-align: center;
   color: purple;
@@ -105,6 +109,7 @@ a {
 }
 
 #create_new_user_link:hover {
+  font-family: "PFHollow";
   color: rgb(61,125,202);
   padding-left: 5%;
 }
@@ -118,22 +123,15 @@ a {
 
 #link_to_user_name:hover{
   color: #2062ac;
+  margin-left: 2%;
 }
 
-#delete_user_link {
-  padding-left: 8%;
-  text-align: center;
-  color: #e64110;
-  text-decoration: none;
-}
-#delete_user_link:hover {
-  color: #ffd510;
-}
 
 #myVideo {
-  opacity: 0.7;
+  position: relative;
+  opacity: 0.8;
   z-index: -1;
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   min-width: 100%;
@@ -142,7 +140,7 @@ a {
 
 #error_explanation {
     z-index: 0;
-    color: white;
+    color: rgb(249, 213, 12);
 }
 
 #battle_button {
